app/less/base.less
@import "../../bower_components/bootstrap/less/bootstrap";
@import "../../bower_components/font-awesome/less/font-awesome";
@fa-font-path:   "../fonts";
@import "mixins";
@import "theme-default";
@import "highlightjs";

/**
 * Base
 *
 *
 */

/* cabin-regular - latin */
@font-face {
  font-family: 'Cabin';
  font-style: normal;
  font-weight: 400;
  src: local('Cabin'),
  url('../fonts/cabin-v26-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
  url('../fonts/cabin-v26-latin-regular.woff') format('woff'); /* Safari, Android, iOS */
}

/* lato-300 - latin */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 300;
  src: local('Lato'),
  url('../fonts/lato-v23-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
  url('../fonts/lato-v23-latin-300.woff') format('woff'); /* Safari, Android, iOS */
}

/* lato-300italic - latin */
@font-face {
  font-family: 'Lato';
  font-style: italic;
  font-weight: 300;
  src: local('Lato'),
  url('../fonts/lato-v23-latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
  url('../fonts/lato-v23-latin-300italic.woff') format('woff'); /* Modern Browsers */
}

/* lato-regular - latin */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  src: local(''),
  url('../fonts/lato-v23-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
  url('../fonts/lato-v23-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

*, *:before, *:after {
  .box-sizing();
}

body {
  font-family: 'Lato', arial, sans-serif;
  color: @text-color;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background: @smoky-white;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Cabin', arial, sans-serif;
  font-weight: 700;
  color: @color;
}

a {
  color: darken(@color-2, 20%);
  .transition (all 0.4s ease-in-out);
  &:hover {
    text-decoration: underline;
    color: @color-2;
  }
  &:focus {
    color: lighten(@color-2, 10%);
  }
}

.btn, a.btn {
  .transition (all 0.4s ease-in-out);
  font-family: 'Montserrat', arial, sans-serif;
  padding: 8px 16px;
  font-weight: bold;
  .fa {
    margin-right: 5px;
  }

  &:hover, &:focus {
    color: #fff;
  }
}

a.btn-cta-primary, .btn-cta-primary {
  background: darken(@color, 30%);
  border: 1px solid darken(@color, 30%);
  color: #fff;
  font-weight: 600;
  text-transform: uppercase;
  &:hover, &:focus {
    background: lighten(@color, 30%);
    border: 1px solid lighten(@color, 30%);
    color: #fff;
  }
}

a.btn-cta-secondary, .btn-cta-secondary {
  background: @color-2;
  border: 1px solid @color-2;
  color: #fff;
  font-weight: 600;
  text-transform: uppercase;
  &:hover, &:focus {
    background: darken(@color-2, 20%);
    border: 1px solid darken(@color-2, 20%);
    color: #fff;
  }
}

a.btn-cta-app, .btn-cta-app {
  background: darken(@color, 30%);
  border: 1px solid darken(@color, 30%);
  color: #fff;
  font-weight: 600;
  &:hover, &:focus {
    background: lighten(@color, 30%);
    border: 1px solid lighten(@color, 30%);
    color: #fff;
  }
}

.text-highlight {
  color: darken(@color, 30%);
}

.offset-header {
  padding-top: 90px;
}

pre code {
  font-size: 16px;
}

hr {
  margin: 10px 0 10px 0 !important;
  border-color: #222222;
}

.visuallyhidden {
  position: absolute;
  overflow: hidden;
  clip: rect(0 0 0 0);
  height: 1px; width: 1px;
  margin: -1px; padding: 0; border: 0;
}

/**
 * Header
 *
 */
.header {
  padding: 10px 0;
  background: @color;
  color: @smoky-white;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;

  &.navbar-fixed-top {
    background: #fff;
    z-index: 9999;
    .box-shadow (0 0 4px rgba(0, 0, 0, 0.4));
    .logo {
      a {
        color: @color;
      }
    }
    .main-nav .nav .nav-item a {
      color: @text-secondary;
    }
  }

  .logo {
    margin: 0;
    font-size: 26px;
    padding-top: 10px;
    a {
      color: #fff;
      &:hover {
        text-decoration: none;
      }
    }
  }
  .main-nav {
    margin-top: 10px;
    button {
      background: #000000;
      color: #fff !important;
      .border-radius(4px);
      &:focus {
        outline: none;
      }
      .icon-bar {
        background-color: #fff;
      }
    }
    .navbar-collapse {
      padding: 0;
    }
    .nav {
      .nav-item {
        font-weight: normal;
        margin-right: 10px;
        font-family: 'Montserrat', sans-serif;
        &.active {
          a {
            background: @color-2;
            color: @color;
            .border-radius(10px);
          }
        }
        a {
          font-weight: 200;
          color: #ed6a36;
          .transition (none);
          font-size: 14px;
          padding: 10px 10px;
          &:hover, &:focus, &:active {
            background: @smoky-white;
            color: @color;
            .border-radius(10px)
          }
        }
        &.active {
          color: darken(#ed6a36, 33%);
        }
        &.last {
          margin-right: 0;
        }
      }
    }
  }
}

/**
 * Promo Section on start page
 *
 */
.promo {
  background: #333 url("../../images/background.png") repeat;
  color: #fff;
  padding-top: 150px;
  width: 100%;
  .title {
    font-size: 98px;
    color: darken(white, 30%);
    margin-top: 0;
    .highlight {
      color: @color-2;
    }
  }

  .intro {
    font-size: 28px;
    max-width: 680px;
    margin: 0 auto;
    margin-bottom: 30px;
  }

  .btns {
    margin-top: 15px;
    .btn {
      margin-right: 15px;
      font-size: 18px;
      padding: 8px 30px;
    }
  }

  .love-phpmyfaq {
    margin-top: 120px;
    margin-bottom: 30px;
  }

  .meta {
    margin-bottom: 30px;
    color: darken(@smoky-white, 20%);
    li {
      margin-right: 15px;
      padding: 8px 16px;
      background: @smoky-white;
      .border-radius(8px);
    }
    a {
      color: darken(@color-2, 20%);
      &:hover, &:focus {
        color: darken(@color-2, 30%);
      }
    }
  }

  .social-media {
    background: darken(@color, 15%);
    padding: 10px 0;
    margin: 0 auto;
    li {
      margin-top: 15px;
      &.facebook-like {
        margin-top: 0;
        position: relative;
        top: -5px;
      }
    }
  }
}

/**
 * Styles for sections
 *
 */
.section {
  padding: 80px 0;
  .container {
    background: #ffffff;
    .border-radiuses(0, 20px, 20px, 0);
  }
}

.h2-numbering {
  counter-reset: h2;

  h2 {
    font-size: 16px;
    &:before {
      counter-increment: h2;
      content: counter(h2) ".";
      display: inline-block;
      margin-right: 10px;
    }
  }
}

/**
 * News Section on start page
 *
 */
.news {
  padding: 20px 0;
  background: @smoky-white;
  .row {
    .icon-holder {
      .fa {
        font-size: 56px;
      }
    }
  }
}


/**
 * Features Section
 *
 */
.features {
  padding: 80px 0;

  .container {
    background: #ffffff;
    .border-radiuses(0, 20px, 20px, 0);
  }

  .core-features {
    margin-bottom: 36px;
  }

  h2 {
    margin-bottom: 24px;
  }

  .title {
    color: darken(@color, 30%);
    margin-top: 20px;
    margin-bottom: 30px;
  }

  .feature-list {
    font-size: 125%;
    .fa {
      color: @color-2;
    }
  }

  .item {
    position: relative;
    margin-bottom: 30px;
    .fa {
      position: absolute;
      left: 30px;
      top: 0;
      font-size: 36px;
      color: @color-2;
    }
    .content {
      padding-left: 60px;
      .sub-title {
        margin-top: 0;
        color: darken(@color, 30%);
        font-size: 18px;
      }
    }
  }
}

/**
 * Download Section
 *
 */
.downloads {
  .container {
    .btn-download {
      margin-top: 12px;
      border: 2px solid @color-2;
    }
    .small {
      font-size: 80% !important;
    }
    .label-info {
      background: @color-2 !important;
    }
  }
}

/**
 * Top Footer Section
 *
 */
.top-footer {
  padding: 40px 0;
  background: @color;
  color: #fff;

  h3 {
    color: @smoky-white;
  }

  ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  a {
    color: @color-2;
    &:hover {
      color: darken(@color-2, 10%);
    }
  }

  .info {
    margin-top: 35px;
  }
  .social-icons {
    list-style: none;
    padding: 10px 0;
    margin-bottom: 0;
    display: inline-block;
    margin: 0 auto;
    li {
      float: left;
      &.last {
        margin-right: 0;
      }
    }

    a {
      display: inline-block;
      background: darken(@color, 15%);
      width: 48px;
      height: 48px;
      text-align: center;
      padding-top: 12px;
      .border-radius(50%);
      margin-right: 8px;
      float: left;

      &:hover {
        background: darken(@color-2, 10%);
      }

      .fa {
        color: #fff;
        &:before {
          font-size: 26px;
          text-align: center;
          padding: 0;
        }
      }
    }
  }
}

/**
 * Footer Section
 *
 */
.footer {
  padding: 15px 0;
  background: darken(@color, 40%);
  color: #fff;
  .copyright {
    .opacity(0.8);
  }
  .fa-heart {
    color: @heart;
  }
  a {
    color: @color-2;
    &:hover {
      color: darken(@color-2, 10%);
    }
  }
}

/**
 * Archive
 *
 */
.archivelist {
  h2, h3 {
    font-size: 16px;
    font-weight: normal;
    margin-top: 0;
    font-family: Lato, Arial, sans-serif;
  }
}

/**
 * Translations
 *
 */
.translations {
  .list-translations {
    -webkit-column-count: 4;
    -moz-column-count: 4;
    column-count: 4;
    -webkit-column-gap: 4em;
    -moz-column-gap: 4em;
    column-gap: 4em;
    -webkit-column-rule: 1px dotted @color;
    -moz-column-rule: 1px dotted @color;
    column-rule: 1px dotted @color;
  }
}

.documentation {
  section {
    margin-top: 80px;
  }
}

/**
 * App
 *
 */
.app {
  .information {
  }
}

/**
 * Demo
 *
 */
.demo {
  .php {
    margin-top: 20px;
    margin-bottom: 20px;
    .btn-cta-primary {
      text-transform: none !important;
      margin-bottom: 10px;
    }
  }
  .hhvm {
    margin-top: 20px;
  }
}

/**
 * Retina images
 *
 */
@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
  .promo {
    background: #333 url("../../images/background@2X.png") repeat;
    width: auto;
    overflow: auto;
    h2.title {
      font-size: 48px;
    }
    p.intro {
      font-size: 18px;
    }
  }
}

